--- a/templates/main.html
+++ b/templates/main.html
@@ -51,14 +51,15 @@
 	<div class="span3">
 		<div class="row">
 			<div class="span1">
-				<img src="http://cdn1.iconfinder.com/data/icons/WPZOOM_Social_Networking_Icon_Set/64/facebook.png" width="60px">
+				<img src="{{ image.facebook.url() }}" width="60px">
 			</div>
 			<div class="span1">
-				<img width="60px" src="http://cdn1.iconfinder.com/data/icons/WPZOOM_Social_Networking_Icon_Set/64/twitter.png">
+				<img src="{{ image.twitter.url() }}" width="60px">
 			</div>
 			<div class="span1">
-				<img width="60px" src="http://cdn1.iconfinder.com/data/icons/WPZOOM_Social_Networking_Icon_Set/64/rss.png">
+				<img src="{{ image.rss.url() }}" width="60px">
 			</div>
+			
 		</div>
 		
 		<br>
