--- a/templates/base.html
+++ b/templates/base.html
@@ -66,9 +66,50 @@
 	<!--/HEADER-->
 
 {% block content %}{% endblock content %}
-</div> 
+
+</div>
 <footer>
-</footer>
+	<div class="container">
+		<div class="row">
+			<div class="span3">
+				<h5>Nuestros servicios</h5>
+				<ul>
+					<li>Consultoría Marketing</li>
+					<li>Consultoría Marketing</li>
+					<li>Consultoría Marketing</li>
+					<li>Consultoría Marketing</li>
+				</ul>
+			</div>
+			<div class="span3">
+				<h5>Nuestra escuela</h5>
+				<ul>
+					<li>Consultoría Marketing</li>
+					<li>Consultoría Marketing</li>
+					<li>Consultoría Marketing</li>
+					<li>Consultoría Marketing</li>
+				</ul>
+			</div>
+			<div class="span3">
+				<h5>Tresce</h5>
+				<ul>
+					<li>Consultoría Marketing</li>
+					<li>Consultoría Marketing</li>
+					<li>Consultoría Marketing</li>
+					<li>Consultoría Marketing</li>
+				</ul>
+			</div>
+			<div class="span3">
+				<h5>Info</h5>
+				<ul>
+					<li>Consultoría Marketing</li>
+					<li>Consultoría Marketing</li>
+					<li>Consultoría Marketing</li>
+					<li>Consultoría Marketing</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</footer> 
 <!-- /container -->
 <!-- Le javascript
 ================================================== -->
